# m07-p7.1

./: .env.kaggle  .env.local  .gitignore  3D_PATCH_EMBEDDING_GUIDE.md  COMPARISON.md  README.md  TRAINING_GUIDE.md  download_data.py  download_data_from_kaggle.py  generate_submission.py  inference.py  pyproject.toml  quick_train.sh  requirements.txt  train.py  train_improved.py  visualize_training.py
checkpoint/: submission_14.csv
make-inference-n-submit/notebooks/: runbook.ipynb
notebooks/: Module7.ipynb  runbook-multiplatform.ipynb  runbook.ipynb  videomae.ipynb
src/: config.py  dataset.py  dataset_enhanced.py  engine.py  logging_utils.py  model.py  utils.py
